Add: GET /file/:id - download file by id
